removed a few files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# For this project
+PyCitySchools/*
+
 # Created by .ignore support plugin (hsz.mobi)
 ### Python template
 # Byte-compiled / optimized / DLL files
